# GVHMR

./: pyproject.toml  run_demo.sh  setup_gvhmr.sh
hmr4d/utils/preproc/: tracker.py
hmr4d/utils/ui/: __init__.py  tracker_selection.py
spec/: multi_person_demo.md
tools/demo/: demo.py  demo_multi.py
