[project]
name = "gvhmr"
version = "0.1.0"
description = "GVHMR environment (uv-based, Blackwell/sm_120)"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  # --- PyTorch (nightly, CUDA 12.8+) ---
  # 実体は uv lock/sync で nightly/cu128 インデックスから取得します
  "torch>=2.5.0.dev0",
  "torchvision>=0.20.0.dev0",
  # --- Vision/ML ---
  "timm==0.9.12",
  "lightning==2.3.0",
  # --- Hydra ecosystem ---
  "hydra-core==1.3",
  "hydra-zen",
  "hydra_colorlog",
  "rich",
  # --- Common utils ---
  "numpy==1.23.5",
  "matplotlib",
  "ipdb",
  "setuptools>=68.0",
  "black",
  "tensorboardX",
  "opencv-python",
  "ffmpeg-python",
  "scikit-image",
  "termcolor",
  "einops",
  "imageio==2.34.1",
  "av==13.0.0",
  "joblib",
  # --- 3D / geometry ---
  "trimesh",
  "chumpy==0.70",
  "smplx",
  "wis3d",
  "pycolmap",
  # --- 2D pose / misc ---
  "ultralytics==8.2.42",
  "cython",
  "cython_bbox",
  "lapx",
  # --- PyTorch3D (build from source; matches nightly torch) ---
  "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@main",
  "yacs>=0.1.8",
]

[tool.uv.extra-build-dependencies]
chumpy = ["pip", "setuptools", "wheel"]
cython_bbox = ["Cython>=0.29"]
lapx = ["Cython>=0.29"]
pytorch3d = ["pip", "setuptools", "wheel", "ninja", "cmake", "torch", "numpy"]



[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
